manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bergtobias-web
  namespace: bergtobias # Specify the namespace
  labels:
    app: bergtobias
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bergtobias
  template:
    metadata:
      labels:
        app: bergtobias
    spec:
      containers:
      - name: bergtobias
        image: docker.io/nilsdacke1/my-image-name:latest
        ports:
        - containerPort: 80
