manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
spec:
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
