manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bergtobias-service
  namespace: bergtobias # Add the namespace here
spec:
  selector:
    app: bergtobias
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
